# Insta-Bot

./: .gitignore  LICENSE  pyproject.toml
apps/edit_video/: add_watermark.py
apps/telegram_bot/: send_telegram_video.py
bot/download_video/: add_watermark.py
bot/edit_video/: add_watermark.py  download_video.py
